style input boxes

--- a/public/global.css
+++ b/public/global.css
@@ -64,3 +64,9 @@ button:not(:disabled):active {
 button:focus {
 	border-color: #666;
 }
+
+input {
+    width: 90%;
+    border: none;
+    outline: none;
+}
